classDiagram

class AnnoScolastico {
  annoScolasticoId
  testo
  inizio
  fine
}
  
class Classe {
  classeId
  annoScolasticoId
  anno
  sezione
  indirizzo
  articolazione
  maxGiustificazioni
}

AnnoScolastico "1" -- "*" Classe

class Registro {
  studenteId
  classeId
}

class Studente {
  studenteId
  nome
  cognome
}

Classe "1" -- "*" Registro
Registro "*" -- "1" Studente

class Programmazione {
  classeId
  argomentoId
}

class Argomento {
  argomentoId
  argomento
}

Classe "1" -- "*" Programmazione
Programmazione "*" -- "1" Argomento

class Quesito {
  quesitoId
  argomentoId
  quesito
}

Argomento "1" -- "*" Quesito

class Assenza {
  studenteId
	data
}

Studente "1" -- "*" Assenza

class Giustificazione {
  studenteId
  data
  immotivata
}

Studente "1" -- "*" Giustificazione

class Interrogazione {
  interrogazioneId
  studenteId
  argomentoId
  data
  voto
  descrizione
}

Studente "1" -- "*" Interrogazione
Interrogazione "*" -- "1" Argomento

class Verbale {
  interrogazioneId
  quesitoId
}

Interrogazione "1" -- "*" Verbale

class Valutazione{
  interrogazioneId
  descrittoreId
}

Interrogazione "1" -- "*" Valutazione

Valutazione "1" -- "*" Descrittore

class Indicatore {
  indicatoreId
  indicatore
  descrizione
  peso
}

class Descrittore {
  descrittoreId
  indicatoreId
  descrittore
  descrizione
  livello
}

Indicatore "1" -- "*" Descrittore

